--- a/reserveTime/restaurant/templates/register-restaurant.html
+++ b/reserveTime/restaurant/templates/register-restaurant.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -69,8 +68,9 @@
         <div class="container main-register-container pb-5">
             <div class="row">
                 <div class="col-lg-12 pt-5">
-                    <form action="">
-                        <div class="row">
+                    <form action="" method='POST'>
+                    {% csrf_token %}
+                        {% comment %} <div class="row">
                             <div class="col-lg-6">
                                 <div class="form-group form-group-input" >
                                     <div class="field-name">First Name <span style="color: brown;">*</span></div>
@@ -152,7 +152,8 @@
                                 </div>
                             </div>
                             
-                        </div>
+                        </div> {% endcomment %}
+                        {{form}}
                         <div class="row">
                             <div class="col-lg-3 mx-auto">
                                 <div class="form-group">
