--- a/reserveTime/account/templates/login-user.html
+++ b/reserveTime/account/templates/login-user.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="http:////netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+    
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/fontawesome.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
@@ -14,10 +16,9 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/user-profile.css' %}">
     <link rel="stylesheet" href="{% static 'css/company-profile.css' %}">
-    <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
     <link rel="stylesheet" href="{% static 'css/reserve-page.css' %}">
-    <link rel="stylesheet" href="{% static 'css/custom.css' %}">
-    <title>User Register</title>
+    <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
+    <title>User Login</title>
 </head>
 <body id="profile-body">
     
@@ -72,32 +73,26 @@
                 <div class="col-lg-5 mx-auto pt-5">
                     <form method = "POST">
                         {% csrf_token %}
-                        <div class="form-group">
-                            {{form.first_name}}
-                            {{form.first_name.errors}}
-                        </div>
-                        <div class="form-group">
-                            {{form.last_name}}
-                            {{form.last_name.errors}}
-                        </div>
-                        <div class="form-group">
+                        {{form}}
+                        {% comment %} <div class="form-group">
                             {{form.username}}
-                            {{form.username.errors}}
+                            {{form.username.errors}}  
                         </div>
                         <div class="form-group">
-                            {{form.password1}}
-                            {{form.password1.errors}}
+                            {{form.password}}
+                            {{form.password.errors}}
+                        </div> {% endcomment %}
+                        <div class="form-group form-check">
+                          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                          <label class="form-check-label" for="exampleCheck1">Remember me</label>
+                          <a href="" class="float-right">Forgot password?</a>
                         </div>
-                        <div class="form-group">
-                            {{form.password2}}
-                            {{form.password2.errors}}
-                        </div> 
                         <div class="form-group" style="text-align: center;">
-                            <input type="submit" value="Create Account" class="btn btn-danger px-3 register-user-btn">
-                        </div> 
+                            <input type="submit" value="Sign In" class="btn btn-danger px-5 register-user-btn" >
+                        </div>
                     </form>
                 </div>
-                
+               
             </div>
             <div class="row">
                 <div class="col-lg-5 mx-auto pt-5">
