--- a/reserveTime/core/templates/edit_profile.html
+++ b/reserveTime/core/templates/edit_profile.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/fontawesome.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/reset.css' %}">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'css/user-profile.css' %}">
-    <link rel="stylesheet" href="{% static 'css/company-profile.css' %}">
-    <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
-    <link rel="stylesheet" href="{% static 'css/reserve-page.css' %}">
-    <link rel="stylesheet" href="{% static 'css/custom.css' %}">
-    <title>User Register</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/fontawesome.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/user-profile.css">
+    <link rel="stylesheet" href="css/company-profile.css">
+    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/reserve-page.css">
+    <link rel="stylesheet" href="css/custom.css">
+    <title>Edit user profile</title>
 </head>
 <body id="profile-body">
     
@@ -26,7 +25,7 @@
             <div class="row justify-content-between">
                 <div class="left side">
                     <a href="#">
-                        <img src="{% static 'images/logo.png' %}" width="250px" alt="">
+                        <img src="images/logo.png" width="250px" alt="">
                     </a>
                 </div>
                 <div class="right side">
@@ -70,51 +69,33 @@
         <div class="container main-register-container pb-5">
             <div class="row">
                 <div class="col-lg-5 mx-auto pt-5">
-                    <form method = "POST">
-                        {% csrf_token %}
+                    <form>
                         <div class="form-group">
-                            {{form.first_name}}
-                            {{form.first_name.errors}}
+                            <label for="" class="">First Name :</label>
+                            <input type="text" class="form-control edit-input" id="exampleInputEmail1" aria-describedby="emailHelp" >
+                            
                         </div>
                         <div class="form-group">
-                            {{form.last_name}}
-                            {{form.last_name.errors}}
+                            <label for="" class="">Last Name :</label>
+                            <input type="text" class="form-control edit-input" id="exampleInputEmail1" aria-describedby="emailHelp" >
+                            
                         </div>
                         <div class="form-group">
-                            {{form.username}}
-                            {{form.username.errors}}
+                            <label for="" class="">Email :</label>
+                            <input type="email" class="form-control edit-input" id="exampleInputEmail1" aria-describedby="emailHelp" >
+                            
                         </div>
-                        <div class="form-group">
-                            {{form.password1}}
-                            {{form.password1.errors}}
+                        <div class="form-group form-check">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                            <label class="form-check-label" for="exampleCheck1">Turn notifications on</label>
                         </div>
-                        <div class="form-group">
-                            {{form.password2}}
-                            {{form.password2.errors}}
-                        </div> 
                         <div class="form-group" style="text-align: center;">
-                            <input type="submit" value="Create Account" class="btn btn-danger px-3 register-user-btn">
-                        </div> 
+                            <input type="submit" value="Edit Profile" class="btn btn-danger register-user-btn px-5">
+                        </div>
                     </form>
                 </div>
                 
             </div>
-            <div class="row">
-                <div class="col-lg-5 mx-auto pt-5">
-                    <form>
-                        <div class="form-group">
-                            <a class="btn btn-block btn-social btn-google py-3" style="border: 1px solid #ccc;">
-                                <i class="fab fa-google-plus-g mr-2"></i>Continue with Google
-                            </a>
-                            <a class="btn btn-block btn-social btn-facebook py-3 social" style="border: 1px solid #ccc">
-                                <i class="fab fa-facebook-f mr-2"></i> Continue with Facebook
-                            </a>
-                        
-                        </div>
-                    </form>
-                </div>
-            </div>
-        
         </div>
     <!-- </main> -->
     
