--- a/reserveTime/core/templates/register-restaurant.html
+++ b/reserveTime/core/templates/register-restaurant.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/fontawesome.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/user-profile.css">
-    <link rel="stylesheet" href="css/company-profile.css">
-    <link rel="stylesheet" href="css/reserve-page.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/fontawesome.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/reset.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/user-profile.css' %}">
+    <link rel="stylesheet" href="{% static 'css/company-profile.css' %}">
+    <link rel="stylesheet" href="{% static 'css/reserve-page.css' %}">
+    <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
     <title>Restaurant Register</title>
 </head>
 <body id="profile-body">
@@ -24,7 +25,7 @@
             <div class="row justify-content-between">
                 <div class="left side">
                     <a href="#">
-                        <img src="images/logo.png" width="250px" alt="">
+                        <img src="{% static 'images/logo.png' %}" width="250px" alt="">
                     </a>
                 </div>
                 <div class="right side">
@@ -68,14 +69,29 @@
         <div class="container main-register-container pb-5">
             <div class="row">
                 <div class="col-lg-12 pt-5">
-                    <form action="" method='POST'>
-                    {% csrf_token %}
-                        {% comment %} <div class="row">
-                            <div class="col-lg-6">
+                    <p class="bold">You have to fill all informations correctly, we will come back you with ...</p>
+                    <form method="POST">
+                        {% csrf_token %}
+
+                        <div class="row">
+
+                            {% for field in form %}
+                                <div class="col-lg-6">
+                                    <div class="form-group form-group-input" >
+                                        <div class="field-name">{{field.label_tag}} <span style="color: brown;">*</span></div>
+                                        <div>
+                                            {{field}}
+                                            {{field.errors}}
+                                        </div>
+                                    </div>
+                                </div>
+                            {% endfor %}
+                            {% comment %} <div class="col-lg-6">
                                 <div class="form-group form-group-input" >
                                     <div class="field-name">First Name <span style="color: brown;">*</span></div>
                                     <div>
-                                        <input type="text" class="form-control register-input" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                        {{form.first_name}}
+                                        {{form.first_name.errors}}
                                     </div>
                                 </div>
                             </div>
@@ -83,17 +99,17 @@
                                 <div class="form-group form-group-input" >
                                     <div class="field-name">Last Name <span style="color: brown;">*</span></div>
                                     <div>
-                                        <input type="text" class="form-control register-input" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                        {{form.last_name}}
+                                        {{form.last_name.errors}}
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="row">
                             <div class="col-lg-6">
                                 <div class="form-group form-group-input" >
                                     <div class="field-name">Restaurant Name <span style="color: brown;">*</span></div>
                                     <div>
-                                        <input type="text" class="form-control register-input" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                        {{form.company_name}}
+                                        {{form.company_name.errors}}
                                     </div>
                                 </div>
                             </div>
@@ -101,17 +117,17 @@
                                 <div class="form-group form-group-input" >
                                     <div class="field-name">Email Address <span style="color: brown;">*</span></div>
                                     <div>
-                                        <input type="email" class="form-control register-input" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                        {{form.username}}
+                                        {{form.username.errors}}
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="row">
                             <div class="col-lg-6">
                                 <div class="form-group form-group-input" >
                                     <div class="field-name">Phone Number <span style="color: brown;">*</span></div>
                                     <div>
-                                        <input type="text" class="form-control register-input" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                        {{form.phone_number}}
+                                        {{form.phone_number.errors}}
                                     </div>
                                 </div>
                             </div>
@@ -119,48 +135,37 @@
                                 <div class="form-group form-group-input" >
                                     <div class="field-name">Restaurant City <span style="color: brown;">*</span></div>
                                     <div>
-                                        <input type="text" class="form-control register-input" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                        {{form.city_location}}
+                                        {{form.city_location.errors}}
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="row">
                             <div class="col-lg-6 ">
                                 <div class="form-group form-group-input" >
                                     <div class="field-name">Restaurant State/Province <span style="color: brown;">*</span></div>
                                     <div>
-                                        <input type="text" class="form-control register-input" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                        {{form.province_location}}
+                                        {{form.province_location.errors}}
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-6 ">
-                                <div class="form-group form-group-input" >
-                                    <div class="field-name">Restaurant Zip/ Postal Code <span style="color: brown;">*</span></div>
-                                    <div>
-                                        <input type="text" class="form-control register-input" id="exampleInputEmail1" aria-describedby="emailHelp">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
                             <div class="col-lg-6 ">
                                 <div class="form-group form-group-input" >
                                     <div class="field-name">Restaurant Country <span style="color: brown;">*</span></div>
                                     <div>
-                                        <input type="text" class="form-control register-input" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                        {{form.country_location}}
+                                        {{form..errors}}
                                     </div>
                                 </div>
-                            </div>
-                            
-                        </div> {% endcomment %}
-                        {{form}}
+                            </div> {% endcomment %}
+                        </div>
                         <div class="row">
                             <div class="col-lg-3 mx-auto">
                                 <div class="form-group">
                                     <input type="submit" value="CONTACT US" class="btn btn-danger register-restaurant-btn" style="width: 100%;">
                                 </div>
                             </div>
-                            
+
                         </div>
                      
                     </form>
