--- a/reserveTime/static/css/style.css
+++ b/reserveTime/static/css/style.css
@@ -470,6 +470,10 @@ footer{
     padding-top: 10px;
  }
 
+.company-infos-form input{
+    height: 60px !important;
+}
+
  .portion-count{
     position: absolute;
     right: 18px;
@@ -489,4 +493,14 @@ footer{
 
  .reservation-detail-block .menu-items{
      margin-top: 55px;
+ }
+
+ .logo-link{
+    margin: auto;
+    background-color: #fff;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    -webkit-box-shadow: 0px 3px 19px -7px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 3px 19px -7px rgba(0,0,0,0.75);
+box-shadow: 0px 3px 19px -7px rgba(0,0,0,0.75);
  }
