--- a/reserveTime/account/templates/change-password.html
+++ b/reserveTime/account/templates/change-password.html
@@ -77,29 +77,14 @@
                         <div class="form-group form-check">
                           <input type="checkbox" class="form-check-input" id="exampleCheck1">
                           <label class="form-check-label" for="exampleCheck1">Remember me</label>
-                          <a href="{% url 'account:password_reset' %}" class="float-right">Forgot password?</a>
+                          <a href="" class="float-right">Forgot password?</a>
                         </div>
                         <div class="form-group" style="text-align: center;">
-                            <input type="submit" value="Sign In" class="btn btn-danger px-5 register-user-btn" >
+                            <input type="submit" value="Change" class="btn btn-danger px-5 register-user-btn" >
                         </div>
                     </form>
                 </div>
                
-            </div>
-            <div class="row">
-                <div class="col-lg-5 mx-auto pt-5">
-                    <form>
-                        <div class="form-group">
-                            <a class="btn btn-block btn-social btn-google py-3" style="border: 1px solid #ccc;">
-                                <i class="fab fa-google-plus-g mr-2"></i>Continue with Google
-                            </a>
-                            <a class="btn btn-block btn-social btn-facebook py-3 social" style="border: 1px solid #ccc">
-                                <i class="fab fa-facebook-f mr-2"></i> Continue with Facebook
-                            </a>
-                        
-                        </div>
-                    </form>
-                </div>
             </div>
         
         </div>
