--- a/reserveTime/account/templates/password_reset_confirm.html
+++ b/reserveTime/account/templates/password_reset_confirm.html
@@ -46,23 +46,22 @@
                     <a href="#">
                         <img src="{% static 'images/logo.png' %}" width="250px" alt="">
                     </a>
-                </div>
-                
+                </div>  
             </div>
-           
         </div>
-       
     </header>
 
     <!-- <main class="mb-5"> -->
         <div class="container main-register-container pb-5">
             <div class="row">
-                <div class="col-lg-5 mx-auto pt-5">
+                <div class="col-8 mx-auto pt-5">
                     <form method = "POST">
                         {% csrf_token %}
                         {{form}}
-                        <div class="form-group" style="text-align: center;">
-                            <input type="submit" value="Reset Password" class="btn btn-danger px-5 register-user-btn" >
+                        <div class="col-4 mx-auto">
+                            <div class="form-group" style="text-align: center;">
+                                <input type="submit" value="Reset Password" class="btn btn-danger px-5 register-user-btn" >
+                            </div>
                         </div>
                     </form>
                 </div>
