--- a/reserveTime/account/templates/user-profile.html
+++ b/reserveTime/account/templates/user-profile.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/fontawesome.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/user-profile.css">
-    <link rel="stylesheet" href="css/responsive.css">
+   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/fontawesome.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/reset.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/user-profile.css' %}">
+    <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
     <title>My Profile</title>
 </head>
 <body id="profile-body">
@@ -21,15 +22,15 @@
             <div class="row justify-content-between">
                 <div class="left side">
                     <a href="#">
-                        <img src="images/logo.png" width="250px" alt="">
+                        <img src="{% static 'images/logo.png' %}" width="250px" alt="">
                     </a>
                 </div>
                 <div class="right side">
                     <div class="user-profile left-border">
-                        <span> Hi, User <i class="fas fa-chevron-down" id="arrow-down"></i></span>
+                        <span> Hi, {{user.first_name}} <i class="fas fa-chevron-down" id="arrow-down"></i></span>
                         <div class="custom-drop-down shadow" style="display: none;">
                             <div class="triangle"></div>
-                            <span>Hello, User</span>
+                            <span>Hello, user</span>
                             <ul>
                                 <li><a href="#">My Profile</a></li>
                                 <li><a href="#">My Dining History</a></li>
@@ -50,8 +51,9 @@
             </div>
         </div>
         <div class="container custom-container">
-            <div class="row username-box">
-                <h2>UserName</h2>
+            <div class="row username-box">  
+                <img src="{{user.profile_img.url}}" width="150px" alt="">
+                <h2> {{user.first_name}} {{user.last_name}} </h2>
                 <span>0 points</span>
             </div>
         </div>
@@ -66,7 +68,7 @@
                             <ul class="profile-menu-list">
                                 <li><a href="#">Reservations</a></li>
                                 <li><a href="#">Saved Restaurants</a></li>
-                                <li><a href="#">Account Details</a></li>
+                                <li><a href="{% url 'account:user-update' user.pk %}">Account Details</a></li>
                                 <li><a href="#">Delete Account</a></li>
                             </ul>
                         </nav>
@@ -95,11 +97,10 @@
         </div>
     </main>
     
-
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/owl.carousel.min.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
     <script>
         $(document).ready(function(){
             $('.header-btn').click(function(){
