--- a/reserveTime/account/templates/login-user.html
+++ b/reserveTime/account/templates/login-user.html
@@ -26,7 +26,7 @@
         <div class="container custom-container shadow">
             <div class="row justify-content-between">
                 <div class="left side">
-                    <a href="#">
+                    <a href="{% url 'core:home' %}">
                         <img src="{% static 'images/logo.png' %}" width="250px" alt="">
                     </a>
                 </div>
