--- a/reserveTime/account/templates/user-profile.html
+++ b/reserveTime/account/templates/user-profile.html
@@ -21,7 +21,7 @@
         <div class="container custom-container header-container">
             <div class="row justify-content-between">
                 <div class="left side">
-                    <a href="#">
+                    <a href="{% url 'core:home' %}">
                         <img src="{% static 'images/logo.png' %}" width="250px" alt="">
                     </a>
                 </div>
@@ -52,9 +52,15 @@
         </div>
         <div class="container custom-container">
             <div class="row username-box">  
-                <img src="{{user.profile_img.url}}" width="150px" alt="">
-                <h2> {{user.first_name}} {{user.last_name}} </h2>
-                <span>0 points</span>
+                {% if user.profile_img %}
+                    <img src="{{user.profile_img.url}}" alt="">
+                {% else %}
+                    <img src="{% static 'images/profile.png' %}" alt="">
+                {% endif %}
+                <div>
+                    <h2> {{user.first_name}} {{user.last_name}} </h2>
+                    <span>0 points</span>
+                </div>
             </div>
         </div>
     </header>
