--- a/reserveTime/core/templates/company-admin-page.html
+++ b/reserveTime/core/templates/company-admin-page.html
@@ -64,13 +64,13 @@
         
     </header>
 
-    <section class="full">
+    <!-- <section class="full">
         <div class="row">
             <a href="home-page.html" class="logo-link">
                 <img src="{% static 'images/logo.png' %}" width="350px" alt="">
             </a>
         </div>
-    </section>
+    </section> -->
 
     <main>
         <div class="container mt-3 company-admin-container">
@@ -131,6 +131,17 @@
                             <i class="fas fa-clock"></i>
                             <div class="ml-2 d-flex flex-direction-column">
                                 <span class="bold">Reservations</span>
+                                <span class="bold">56</span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-6 d-flex m-auto justify-content-center">
+                    <a href="company-tables.html">
+                        <div class="link-box" style="background-color: #CD6155 ;">
+                            <i class="fas fa-table"></i>
+                            <div class="ml-2 d-flex flex-direction-column">
+                                <span class="bold">Tables</span>
                                 <span class="bold">56</span>
                             </div>
                         </div>
