--- a/reserveTime/static/css/style.css
+++ b/reserveTime/static/css/style.css
@@ -1,4 +1,23 @@
+body{
+    background-color: #f7f7f7;
+}
 
+.custom-container{
+    max-width: 85%;
+    margin: auto;
+    background-color: #ffffff;
+}
+
+.inner-container{
+    max-width: 80%;
+    margin: auto;
+}
+
+.header-img{
+    width: 100%;
+    height: 500px;
+    
+}
   
   .full-screen {
     background-size: cover;
@@ -30,9 +49,6 @@
     border-bottom: 1px solid #ccc;
 }
 
-/* header:hover{
-    background-color: rgba(77, 75, 75, 0.8);
-} */
 
 .side{
     display: flex;
@@ -137,14 +153,7 @@
     outline: none;
 }
 
-.home-main{
-    background-color: #E9E9E9 ;
-    padding-top: 20px;
-}
-.main-container{
-    background-color: #fff;
-    border-radius: 15px;
-}
+
 h3{
     margin: 20px 0;
 }
@@ -207,7 +216,7 @@ h3{
 #custom-carousel .item img{
     display: block;
     width: 100%;
-    height: 180px;
+    height: 250px;
 }
 
 .owl-nav{
@@ -229,7 +238,7 @@ h3{
 
 .col-4 img{
     width: 100%;
-    height: 190px;
+    height: 250px;
 }
 .city-list{
     display: flex;
@@ -505,4 +514,36 @@ footer{
     -webkit-box-shadow: 0px 3px 19px -7px rgba(0,0,0,0.75);
 -moz-box-shadow: 0px 3px 19px -7px rgba(0,0,0,0.75);
 box-shadow: 0px 3px 19px -7px rgba(0,0,0,0.75);
+ }
+
+ .table-container .col{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+ }
+
+ .table-container span{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+ }
+
+ .table-container .col span{
+    width: 150px;
+    height: 100px;
+    background-color: #117A65 ;
+    color: #fff;
+    border-radius: 5px;
+    margin: 5px;
+    font-weight: bold;
+    cursor: pointer;
+ }
+
+ .table-container .row{
+    margin-bottom: 30px;
+    padding-bottom: 10px;
+ }
+
+ .modal-dialog{
+     margin-top: 250px;
  }
