--- a/reserveTime/core/templates/company-photos.html
+++ b/reserveTime/core/templates/company-photos.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/fontawesome.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/user-profile.css">
-    <link rel="stylesheet" href="css/company-profile.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/fontawesome.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/reset.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/user-profile.css' %}">
+    <link rel="stylesheet" href="{% static 'css/company-profile.css' %}">
+    <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
+
+
     <title>Company List</title>
 
     <style>
@@ -30,13 +33,19 @@
     <header>
         <div class="container custom-container ">
             <div class="row justify-content-between">
-                <div class="left side">
-                    <img src="images/profile.png" width="60px" alt="Profile photo">
-                    <div class="d-flex flex-direction-column ml-2">
-                        <span class="mt-1">Welcome</span>
-                        <h5 class="bold">Ruhin Shukurlu</h5>
+                <a href="{% url 'account:company-update' user.pk %}">
+                    <div class="left side">
+                        {% if user.profile_img %}
+                        <img src="{{user.profile_img.url}}" width="60px" alt="Profile photo">
+                        {% else %}
+                        <img src="{% static 'images/profile.png' %}" width="60px" alt="Profile photo">
+                        {% endif %}
+                        <div class="d-flex flex-direction-column ml-2" style="color: wheat;">
+                            <span class="mt-1">Welcome</span>
+                            <h5 class="bold">{{user.first_name}} {{user.last_name}}</h5>
+                        </div>
                     </div>
-                </div>
+                </a>
                 <div class="right side">
                     <div class="notification">
                         <div class="d-flex">
@@ -58,18 +67,16 @@
         <div class="container mt-3 company-admin-container">
             <div class="row">
                 <h3 class="full bottom-border bold pb-3 mb-5">Add Photo</h3>
-                <form action="" class="add-img-form mt-3 mb-3">
+                <form method = "POST" class="add-img-form mt-3 mb-3" enctype="multipart/form-data">
+                    {% csrf_token %}
                     <div class="d-flex">
-                        <label for="upload-img" class="add-img-label">Add Photo<i class="ml-2 fas fa-plus-circle"></i></label>
-                        <input type="file" name="" id="upload-img">
+                        {% comment %} <label for="upload-img" class="add-img-label">Add Photo<i class="ml-2 fas fa-plus-circle"></i></label> {% endcomment %}
+                        {{form.photo}}
+                        {{form.photo.errors}}
                     </div>
-                    <select class="select-img-type">
-                        <option selected>Type</option>
-                        <option value="1">Food</option>
-                        <option value="2">Drink</option>
-                        <option value="3">Interior</option>
-                        <option value="4">Exterior</option>
-                    </select>
+                    {{form.photo_url}}
+                    {{form.photo_type}}
+                    {{form.photo_type.errors}}
                     <input type="submit" value="Save" class="save-btn">
                 </form>
                 <h3 class="full bottom-border bold pb-3 mb-5">Company Photos</h3>
