--- a/reserveTime/core/templates/photo-detail.html
+++ b/reserveTime/core/templates/photo-detail.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+{% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/fontawesome.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/user-profile.css">
-    <link rel="stylesheet" href="css/company-profile.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/fontawesome.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/reset.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/user-profile.css' %}">
+    <link rel="stylesheet" href="{% static 'css/company-profile.css' %}">
+    <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
     <title>Company List</title>
 
     <style>
@@ -31,10 +32,14 @@
         <div class="container custom-container ">
             <div class="row justify-content-between">
                 <div class="left side">
-                    <img src="images/profile.png" width="60px" alt="Profile photo">
+                    {% if user.profile_img %}
+                        <img src="{{user.profile_img.url}}" width="60px" alt="Profile photo">
+                    {% else %}
+                        <img src="{% static 'images/profile.png' %}" width="60px" alt="Profile photo">
+                    {% endif %}
                     <div class="d-flex flex-direction-column ml-2">
                         <span class="mt-1">Welcome</span>
-                        <h5 class="bold">Ruhin Shukurlu</h5>
+                        <h5 class="bold">{{user.first_name}} {{user.last_name}}</h5>
                     </div>
                 </div>
                 <div class="right side">
@@ -58,23 +63,20 @@
         <div class="container mt-3 company-admin-container">
             <div class="row">
                 <h3 class="full bottom-border bold pb-3 mb-5">Edit Photo</h3>
-                <form action="" class="add-img-form mt-3 mb-5">
-                    <div class="d-flex">
+                <form action="" class="add-img-form mt-3 mb-5" method= 'post' enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <div class="d-flex" >
                         <label for="upload-img" class="add-img-label bold">Change Photo<i class="ml-2 fas fa-plus-circle"></i></label>
-                        <input type="file" name="" id="upload-img">
+                        {{form.photo}}
+                        
                     </div>
-                    <select class="select-img-type">
-                        <option selected>Type</option>
-                        <option value="1">Food</option>
-                        <option value="2">Drink</option>
-                        <option value="3">Interior</option>
-                        <option value="4">Exterior</option>
-                    </select>
+                    {{form.photo_url}}
+                   {{form.photo_type}}
                     <input type="submit" value="Save" class="save-btn">
-                    <a href="#" class="delete-btn" data-toggle="modal" data-target="#exampleModal">Delete</a>   
+                    <button type='button' class="delete-btn" data-toggle="modal" data-target="#exampleModal">Delete</button>   
                 </form>
                 <div class="col">
-                    <img src="images/img6.jpg" alt="">
+                    <img src="{{photo.photo.url}}" alt="">
                 </div>
                 
                 
@@ -97,16 +99,18 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
-              <button type="button" class="btn btn-primary">Yes</button>
+              <form method="POST" action="{% url 'restaurant:photo-delete' photo.pk %}">
+                    {% csrf_token %}<input type="submit" class="btn btn-primary" value="DELETE">
+              </form>
             </div>
           </div>
         </div>
       </div>
 
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/owl.carousel.min.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
     <script>
         $(document).ready(function(){
             $('.header-btn').click(function(){
